PyMaker/datas/object2/RawHTML/i17901/Python_DOC_referPages.python-3-0-with-syntax-error.txt
<div class="post-text" itemprop="text">
<p>i have a syntax error with the with statement. i cant figure it out. i am using python 3 and every time i use the with statement it just wont have it. i am trying to make a reader for a txt file and i need this with statement.</p>
<pre><code>import csv

value1 = "Spam"

fname = input(open("Please enter the name of the file you wish to open: ")

with open(fname, 'rb') as csvfile:
    spamreader = csv.reader(csvfile, delimiter=' ', quotechar='|')
    for row in spamreader:
        if value1 in row:
            print(" ".join(row)) 
</code></pre>
<p>i am very new to python its probably very obvious cheers for the help guys</p>
</div>
<div class="post-text" itemprop="text">
<p>The syntax error is not caused by <code>with</code>, but <code>print</code> statement. In Python 3.x, <a href="http://docs.python.org/3/library/functions.html#print" rel="nofollow"><code>print</code></a> is a function.</p>
<pre><code>&gt;&gt;&gt; print 1
  File "&lt;stdin&gt;", line 1
    print 1
          ^
SyntaxError: invalid syntax
&gt;&gt;&gt; print(1)
1
&gt;&gt;&gt;
</code></pre>
<p>So the following line:</p>
<pre><code>print " ".join(row) 
</code></pre>
<p>should be replaced with:</p>
<pre><code>print(" ".join(row))
</code></pre>
<hr/>
<p>In the following sentence, a parenthesis is missing.</p>
<pre><code>fname = input(open("Please enter the name of the file you wish to open: "))
#                                                                         ^
</code></pre>
<p>And <code>open</code> should be omitted:</p>
<pre><code>fname = input("Please enter the name of the file you wish to open: ")
</code></pre>
</div>
<span class="comment-copy">Aside: if you're opening a csv file in Python 3, you should use <code>open(fname, 'r', newline='')</code> instead of <code>open(fname, 'rb')</code> (which is how you did it in Python 2.)  See the <a href="http://docs.python.org/3/library/csv.html#examples" rel="nofollow noreferrer">docs</a>.</span>
<span class="comment-copy">still throwing back a syntax error</span>
<span class="comment-copy">@user3077551: please edit the entire traceback into your question.  Possibly you have an unclosed parenthesis on an earlier line.</span>
<span class="comment-copy">the hoile code is in there</span>
<span class="comment-copy">@user3077551, I updated the answer. Check it out.</span>
<span class="comment-copy">omg..... thanks for the help man hahahahah</span>
